# ao-grasp

./: .gitignore  .gitmodules  README.md  aograsp-environment.yml  get_proposals_from_pcd.sh  index.html  pyproject.toml  run_pointscore_inference.py
.github/workflows/: lint.yml
ao-grasp/models/Pointnet2_PyTorch/: .gitignore
ao-grasp/models/Pointnet2_PyTorch/pointnet2/models/: pointnet2_ssg_cls.py  pointnet2_ssg_sem.py
ao-grasp/models/Pointnet2_PyTorch/pointnet2_ops_lib/pointnet2_ops/_ext-src/src/: sampling_gpu.cu
aograsp/: dataset_paths.py  mesh_utils.py  model_utils.py  rotation_utils.py  viz_utils.py
aograsp/aograsp_model/: 770-network.pth  conf.pth
aograsp/data_utils/: dataset_utils.py  object.py  viz_env.py
aograsp/models/: model_pointscore.py  modules.py
aograsp/models/Pointnet2_PyTorch/pointnet2/data/: ModelNet40Loader.py
aograsp_dataset_utils/: README.md  preprocess_pcd_for_model.py  viz_grasps_pybullet.py  viz_pointcloud.py
test_data/real/: microwave_closed.ply  microwave_open.ply
test_data/synthetic/: Oven_7201_state-0_render-0000.ply  StorageFurniture_45372_state-6_render-0000.ply
viz_data/: viz_grasps_pybullet.py  viz_pointcloud.py
