[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aograsp"
version = "0.0.1"
authors = [
  { name="Claire Chen" },
  { name="Carlota Pares" },
]
description = "AO-Grasp"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["aograsp*"]
exclude = ["viz_data*", "test_data*"]